[package]
name = "turtle-syntax"
version = "6.0.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"
categories = ["parsing"]
keywords = ["turtle", "rdf", "parser"]
description = "RDF Turtle parser"
repository = "https://github.com/timothee-haudebourg/turtle-syntax"
documentation = "https://docs.rs/turtle-syntax"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
decoded-char = "0.1.1"
iref = { version = "3.2.2", features = ["data", "hashbrown", "macros", "serde"] }
static-iref = "3.0.0"
locspan = "0.9.2"
langtag = "0.4.0"
unicase = "2.6"
rdf-types = { version = "0.22.5" }
xsd-types = "0.9.6"
thiserror = "2.0.12"

[dev-dependencies]
codespan-reporting = "0.11.1"
iref-core = "3"
log = "0.4.17"
stderrlog = "0.6.0"
nquads-syntax = "0.19.0"

